--- a/src/views/employees.scss
+++ b/src/views/employees.scss
@@ -9,7 +9,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 1em;
+    padding-bottom: 0.5em;
+    padding-top: 0.5em;
 
     .entries {
       display: flex;
@@ -51,12 +52,20 @@
 
   .title {
     font-size: 20px;
-    padding-top: 1em;
+    padding-top: 0.5em;
     text-align: center;
     color: $color-white;
   }
 
   .p-results{
     font-size: 12px;
+  }
+
+  .css-1ygcj2i-MuiTableCell-root{
+    font-weight: bold;
+    padding:10px;
+  }
+  .css-1ex1afd-MuiTableCell-root{
+    font-size: 13px;
   }
 }
