--- a/src/views/create.scss
+++ b/src/views/create.scss
@@ -12,7 +12,6 @@ body {
   margin: 0 auto;
   margin-top: 2em;
   border-radius: 30px;
-  width: 90%;
   max-width: 900px;
   padding-top: 20px;
   background-color: white;
@@ -101,4 +100,11 @@ h2 {
   border: none;
   cursor: pointer;
   font-weight: bold;
+}
+.calendar.show {
+  background-color: white;
+}
+
+.custom-date {
+  font-size: 14px;
 }
