--- a/src/views/create.scss
+++ b/src/views/create.scss
@@ -1,25 +1,19 @@
-
-$primary-color: #92aa96;
-
+$primary-color: #d9e4dc;
+$btn-color: #98bca1;
 body {
-  background-color: $primary-color;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-      "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  min-width: 330px;
+
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
 }
 
 #container {
+  width: 1000px;
   margin: 0 auto;
   margin-top: 2em;
   border-radius: 30px;
-  max-width: 900px;
-  padding-top: 20px;
-  background-color: white;
-  
-  .infos-user, .adress-user {
-    width: 100%;
-  }
 
+  background-color: $primary-color;
   h1 {
     font-size: 20px;
     text-align: center;
@@ -32,35 +26,53 @@ h2 {
 }
 
 #form_create {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 30px;
-  padding-right: 30px;
-  
+  width: 100%;
+  margin-top: 5em;
 
   .formulaire {
     display: flex;
     flex-direction: row;
-    gap: 60px;
+    padding: 1em;
 
-    .separator {
-      width: 1%;
-      background-color: $primary-color;
-      margin-bottom: 2em;
+    .illustration-bloc {
+      width: 50%;
+      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .illustration {
+      margin: 0 auto;
+      width: 90%;
+    }
+    .create-employee {
+      display: flex;
+      flex-direction: row;
+      gap: 60px;
+      justify-content: center;
+    }
+    .bloc-create {
+      width: 70%;
+      display: flex;
+      flex-direction: column;
+      padding: 1em;
     }
   }
 }
 
-.input, .dates, .bloc_adress {
+.input,
+.dates,
+.bloc_adress {
   display: flex;
   flex-direction: column;
   gap: 3px;
   padding-bottom: 1.5em;
 
   input {
-    border: 1px solid rgb(220, 220, 220);
+    border: none;
     border-radius: 5px;
-    padding: 8px;
+    padding: 10px;
   }
 
   label {
@@ -73,7 +85,8 @@ h2 {
     width: 100%;
   }
 
-  .css-o9k5xi-MuiInputBase-root-MuiOutlinedInput-root .css-nxo287-MuiInputBase-input-MuiOutlinedInput-input {
+  .css-o9k5xi-MuiInputBase-root-MuiOutlinedInput-root
+    .css-nxo287-MuiInputBase-input-MuiOutlinedInput-input {
     padding: 8px;
     font-size: 12px;
   }
@@ -85,17 +98,18 @@ h2 {
   }
 
   .css-13cymwt-control {
+    border: none;
     font-size: 12px;
   }
+  
 }
-
 .button {
   display: block;
   margin: auto;
   border-radius: 5px;
-  width: 20%;
+  width: 80%;
   padding: 10px 5px 10px 5px;
-  background-color: $primary-color;
+  background-color: $btn-color;
   color: white;
   border: none;
   cursor: pointer;
@@ -107,4 +121,34 @@ h2 {
 
 .custom-date {
   font-size: 14px;
+  background-color: white;
+  border: none;
+}
+
+.error-message {
+  margin-top: 3px;
+  font-size: 11px;
+  color: red;
+}
+.modal-active #container form {
+  opacity: 0.8; /* Opacité du formulaire */
+  pointer-events: none; /* Désactivation des événements sur le formulaire pour éviter les interactions */
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
+  width: 300px;
+  height: 100px; /* Hauteur fixe de la modal */
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Centrer horizontalement */
+  text-align: center; /* Centrer le texte horizontalement */
+  line-height: 300px; /* Alignement vertical */
 }
