--- a/src/views/create.scss
+++ b/src/views/create.scss
@@ -1,4 +1,4 @@
-$primary-color: #d9e4dc;
+$primary-color: #ddece2;
 $btn-color: #98bca1;
 body {
 
@@ -12,7 +12,6 @@ body {
   margin: 0 auto;
   margin-top: 2em;
   border-radius: 30px;
-
   background-color: $primary-color;
   h1 {
     font-size: 20px;
