--- a/src/views/create.scss
+++ b/src/views/create.scss
@@ -1,11 +1,6 @@
-$primary-color: #ddece2;
-$btn-color: #98bca1;
-body {
+$primary-color: #e3e3dd;
+$btn-color: #6e8672;
 
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-    "Helvetica Neue", sans-serif;
-}
 
 #container {
   width: 1000px;
@@ -13,15 +8,14 @@ body {
   margin-top: 2em;
   border-radius: 30px;
   background-color: $primary-color;
-  h1 {
-    font-size: 20px;
-    text-align: center;
-  }
 }
 
 h2 {
   font-size: 15px;
   margin-bottom: 1em;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-style: normal;
 }
 
 #form_create {
@@ -29,22 +23,8 @@ h2 {
   margin-top: 5em;
 
   .formulaire {
-    display: flex;
-    flex-direction: row;
     padding: 1em;
 
-    .illustration-bloc {
-      width: 50%;
-      text-align: center;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .illustration {
-      margin: 0 auto;
-      width: 90%;
-    }
     .create-employee {
       display: flex;
       flex-direction: row;
@@ -52,10 +32,21 @@ h2 {
       justify-content: center;
     }
     .bloc-create {
-      width: 70%;
       display: flex;
-      flex-direction: column;
-      padding: 1em;
+      flex-direction: row;
+      justify-content: space-around;
+      gap:60px;
+      padding-left: 1.5em;
+      padding-right: 1.5em;
+      padding-top: 1.5em;
+
+      .infos-user {
+        width: 100%;
+      }
+
+      .adress-user {
+        width: 100%;
+      }
     }
   }
 }
@@ -72,10 +63,16 @@ h2 {
     border: none;
     border-radius: 5px;
     padding: 10px;
+    font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   }
 
   label {
     font-size: 12px;
+    font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   }
 }
 
@@ -112,7 +109,10 @@ h2 {
   color: white;
   border: none;
   cursor: pointer;
-  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+  font-size: 14px;
 }
 .calendar.show {
   background-color: white;
@@ -123,7 +123,11 @@ h2 {
   background-color: white;
   border: none;
 }
-
+.select {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
 .error-message {
   margin-top: 3px;
   font-size: 11px;
@@ -150,4 +154,7 @@ h2 {
   justify-content: center; /* Centrer horizontalement */
   text-align: center; /* Centrer le texte horizontalement */
   line-height: 300px; /* Alignement vertical */
+  font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
